fixed spacing and scrolls

--- a/ceres-client/src/components/Dashboard/Dashboard.css
+++ b/ceres-client/src/components/Dashboard/Dashboard.css
@@ -36,14 +36,16 @@
   display: flex;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 30px;
-  margin: 20px 0;
+  /*margin: 20px 0;*/
 }
 
 .card {
-  padding: 25px;
+  /*padding: 25px;*/
+  margin: 0 !important;
+  padding: 0 !important;
   border-radius: 5px;
   background-color: #f5f5f5 !important;
-  border-color: #f5f5f5 !important;
+  /*border-color: #f5f5f5 !important;*/
 }
 
 .title {
@@ -81,8 +83,26 @@
   width: 80%;
 }
 
+.width-100-percent {
+  width: 100%;
+}
+
 .height-100-percent {
   height: 100%;
+}
+
+.height-60-percent {
+  height: 40%;
+}
+
+.height-80-percent {
+  height: 80%;
+}
+
+.leaderboard{
+  height: 100%;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .icon {
